Dev/src/ZoomInfo/objects/zicCleanJob__c.object
<CustomObject>
    <fields>
        <fullName>DateTime_Finished__c</fullName>
        <label>DateTime Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Submitted__c</fullName>
        <label>DateTime Submitted</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Errors_logs__c</fullName>
        <label>Error Logs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matched_Only_Company__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Matched Only Company</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matched__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Matched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unmatched__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unmatched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fields_updated__c</fullName>
        <label>Fields Updated</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>logs__c</fullName>
        <label>Logs</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Clean Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Type__c</columns>
        <columns>Job_Status__c</columns>
        <columns>DateTime_Submitted__c</columns>
        <columns>Records__c</columns>
        <columns>Matched__c</columns>
        <columns>Matched_Only_Company__c</columns>
        <columns>Unmatched__c</columns>
        <columns>Errors__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Clean Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>